# claude-catharsis

./: .gitignore  README.md  install.sh  pyproject.toml
docs/design/: mvp.md
hooks/: session_end.py
prompts/: analyze.md
src/catharsis/: __init__.py  cli.py  config.py  db.py  paths.py  status.py
src/catharsis/analyzer/: judge.py  metrics.py  report.py
src/catharsis/collector/: __init__.py  backfill.py  hook.py  ingest.py  session.py
src/catharsis/improver/: __init__.py  propose.py
src/catharsis/prompts/: improve.md
src/catharsis/reviewer/: apply.py  interactive.py
src/cc_improve/: __init__.py  cli.py  config.py  db.py  paths.py  status.py
src/cc_improve/analyzer/: __init__.py  judge.py  report.py
src/cc_improve/collector/: backfill.py  hook.py  ingest.py  parser.py  session.py
src/cc_improve/improver/: propose.py
src/cc_improve/reviewer/: __init__.py  apply.py  interactive.py
tests/: conftest.py  test_analyzer.py  test_cli.py  test_collector.py  test_improver.py  test_integration.py  test_metrics.py  test_parser.py  test_review.py
