[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "claude-catharsis"
version = "0.1.0"
description = "Analyze Claude Code conversations and propose instruction improvements"
requires-python = ">=3.10"
dependencies = [
    "click>=8.0",
    "pyyaml>=6.0",
    "rich>=13.0",
]

[project.scripts]
catharsis = "catharsis.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
catharsis = ["prompts/*.md"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
